<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:background="@color/dark_purple"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/header"
        android:background="@color/eggplant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="20dp">

        <ImageView
            android:id="@+id/ivSheetImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_settings"
            android:layout_marginLeft="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tvTittle"/>

        <TextView
            android:id="@+id/tvTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Settings"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/ivSheetImage"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvTuningSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tuning"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"/>

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="15dp"
        android:background="#B3B3B3"
        app:layout_constraintTop_toBottomOf="@id/tvTuningSection"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:text="@string/a4_frequency"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"/>

    <EditText
        android:id="@+id/etFrequency"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:inputType="number"
        android:text="@string/a4_base_frequency"
        android:hint="@string/a4_base_frequency"
        android:textColorHint="@color/davys_gray"
        android:backgroundTint="@color/eggplant"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"/>

    <TextView
        android:id="@+id/tvFrequencySensibility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:text="@string/frequency_sensibility"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFrequency"/>

    <EditText
        android:id="@+id/etFrequencySensibility"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:inputType="numberDecimal"
        android:text="@string/base_frequency_sensibility"
        android:hint="@string/base_frequency_sensibility"
        android:backgroundTint="@color/eggplant"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFrequency"/>

    <TextView
        android:id="@+id/tvNoteDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingLeft="20dp"
        android:text="@string/note_display"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFrequencySensibility"/>

    <TextView
        android:id="@+id/tvNoteDisplayC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:paddingTop="10dp"
        android:text="Dó"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etFrequencySensibility"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchNoteDisplay"
        android:layout_width="70dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:buttonTint="@color/eggplant"
        android:textSize="20sp"
        android:text="C"
        app:layout_constraintEnd_toStartOf="@+id/tvNoteDisplayC"
        app:layout_constraintTop_toBottomOf="@+id/etFrequencySensibility" />

    <Button
        android:id="@+id/btnSaveSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings"
        android:backgroundTint="@color/reseda_green"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>